fix result saving to disk