@@ -30,10 +30,7 @@ import java.io.*;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.FileAlreadyExistsException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.*;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -194,13 +191,28 @@ public class ResponseTransfer implements Constants {
     }
 
     void copyFilesToResultsFolder(String className) throws IOException {
-        new File(System.getProperty("user.dir") + "/results_all_classes/" + "result_" + className).mkdirs();
-        List<String> files = Arrays.asList("/results/", "/result_noun.json", "/result_adj.json", "/result_verb.json");
+        String workingDirectory = System.getProperty("user.dir");
+        Path source = Paths.get(workingDirectory + "/results/");
+        Path destination = Paths.get(workingDirectory + "/results_all_classes/" + "result_" + className+"/results/" );
+        if(!Files.isDirectory(destination)){
+            Files.createDirectories(destination);}
+        List<String> files = Arrays.asList("/result_noun.json", "/result_adj.json", "/result_verb.json");
+
+        Files.list(source).forEach(src -> {
+            try {
+                Files.copy(src, Paths.get(destination+"/"+ src.getFileName().toString()), StandardCopyOption.REPLACE_EXISTING);
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+
+
+        });
+
 
         for (String f : files) {
             try {
-                Files.copy(Path.of(System.getProperty("user.dir") + f),
-                        Path.of(System.getProperty("user.dir") + "/results_all_classes/" + "result_" + className + "/"));
+                Files.copy(Paths.get(workingDirectory + f),
+                        Paths.get(workingDirectory + "/results_all_classes/" + "result_" + className + "/" + f), StandardCopyOption.REPLACE_EXISTING);
             } catch (Exception e) {
                 System.err.println("Error copying " + f);
             }
